Added a function to PlanoCarros that runs the simulations and gets all the moves from all the rounds
I still need to send the setup

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -23,6 +23,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Move():\n",
+    "    \"\"\"\n",
+    "    The message class is used to wrap messages and send messages between agents.\n",
+    "    It also contains the environment buffer that stores all messages.\n",
+    "    \"\"\"\n",
+    "    # environment_buffer = [] # The environment buffer\n",
+    "    rounds = []\n",
+    "    curr_round = -1\n",
+    "    def __init__(self,agent_id=None,action=None,cell=None,looking_direction=None):\n",
+    "        \"\"\"\n",
+    "        The __init__ function is called when the class is instantiated.\n",
+    "        It sets the sender, receiver, performative and content of the message.\n",
+    "        \"\"\"\n",
+    "        self.agent_id = agent_id\n",
+    "        self.action = action\n",
+    "        self.cell = cell\n",
+    "        self.looking_direction = looking_direction\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        \"\"\"\n",
+    "        The __str__ function is called when the class is converted to a string.\n",
+    "        It returns a string representation of the move.\n",
+    "        \"\"\"\n",
+    "        return f\"\\n\\\n",
+    "        Agent_Id: {self.agent_id}, \\n\\\n",
+    "        Action: {self.action}, \\n\\\n",
+    "        Cell: {self.cell}, \\n\\\n",
+    "        Looking_Direction: {self.looking_direction}\"\n",
+    "    \n",
+    "    def add_move(self):\n",
+    "        \"\"\"\n",
+    "        The send function is used to send a message to the environment buffer.\n",
+    "        \"\"\"\n",
+    "        Move.rounds[Move.curr_round].append(self)\n",
+    "        #Message.environment_buffer.append(self)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def start_new_round(cls):\n",
+    "        cls.curr_round += 1\n",
+    "        cls.rounds.append([])\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def start_new_game(cls):\n",
+    "        cls.curr_round = -1\n",
+    "        cls.rounds = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class RandomAgent(ap.Agent):\n",
     "    \"\"\" \n",
     "    Se mueve a celdas al azar\n",
@@ -98,7 +151,8 @@
     "        self.see()\n",
     "        self.next()\n",
     "        self.action()\n",
-    "        \n",
+    "        # saving move to  move_stack\n",
+    "        self.model.record_move(self)\n",
     "    \n",
     "    \"\"\" Aux functions \"\"\"\n",
     "    # Assumes that given position is valid\n",
@@ -136,6 +190,15 @@
     "class BoxWarehouseModel(ap.Model):\n",
     "    \"\"\" Modelo de limpieza de tablero \"\"\"\n",
     "    \n",
+    "    def record_move(self, agent):\n",
+    "        move = Move(\n",
+    "            agent_id=agent.id,\n",
+    "            action=agent.intention,\n",
+    "            cell=agent.intention_position,\n",
+    "            looking_direction=agent.looking_direction\n",
+    "        )\n",
+    "        move.add_move()\n",
+    "    \n",
     "    def setup(self):\n",
     "        \n",
     "        self.box_count, self.agent_positions = self.generateFloorPlan(self.p.total_boxes)\n",
@@ -156,8 +219,12 @@
     "        self.is_floor_organized = True if self.p.total_boxes <= 0 else False # Es falso a menos que no haya cajas\n",
     "        self.finish_time = self.p.steps + 1 # Por default no termina en tiempo\n",
     "\n",
-    "\n",
+    "        # Empezamos a guardar los diferentes movimientos\n",
+    "        Move.start_new_game()\n",
+    "        self.rounds = None\n",
+    "        \n",
     "    def step(self):\n",
+    "        Move.start_new_round()\n",
     "        self.all_agents.move()\n",
     "\n",
     "    def update(self):\n",
@@ -178,7 +245,8 @@
     "        self.report('total_moves', self.total_moves)\n",
     "        self.report('time_taken', self.finish_time)\n",
     "        self.report('percentage_time_taken', self.finish_time / self.p.steps)\n",
-    "        \n",
+    "        # self.report('rounds', Move.rounds)\n",
+    "        self.rounds = Move.rounds\n",
     "    \n",
     "    \n",
     "    \"\"\" Aux functions \"\"\"\n",
@@ -605,11 +673,12 @@
    "outputs": [],
    "source": [
     "options = {\n",
-    "    'show_animation': True,\n",
+    "    'show_animation': False,\n",
     "    'multirun_experiment': False, # Not tested\n",
     "    'test_time_taken': False, # Not tested\n",
     "    'test_mov_amount': False, # Not tested\n",
-    "}"
+    "    'single_experiment': False, # Tested \n",
+    "} # Estas siempre tienen que estar en falso a menos que estemos probando algo porque tambien se llaman desde PlanoCarros"
    ]
   },
   {
@@ -656,6 +725,55 @@
     "if options['test_mov_amount']:\n",
     "    test_mov_amount()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if options[\"single_experiment\"]: # No borrar\n",
+    "    parameters = {\n",
+    "        'steps': 100,\n",
+    "        'n': 20,\n",
+    "        'm': 20,\n",
+    "        'total_boxes': 250,\n",
+    "        # 'seed': 22,\n",
+    "    }\n",
+    "    model = BoxWarehouseModel(parameters)\n",
+    "    results = model.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "print(len(model.rounds))\n",
+    "for round in model.rounds:\n",
+    "    print(\"New Round\")\n",
+    "    for move in round:\n",
+    "        print(move)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
