Now also sent initial_position to OpenGL

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -23,6 +23,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class InitialPosition():\n",
+    "    \"\"\"\n",
+    "    Initial_Position\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self,agents=None,board_dimensions=None,box_positions=None,discharge_positions=None):\n",
+    "        \"\"\"\n",
+    "        The __init__ function is called when the class is instantiated.\n",
+    "        It sets the sender, receiver, performative and content of the message.\n",
+    "        \"\"\"\n",
+    "        self.agents = agents\n",
+    "        self.board_dimensions = board_dimensions\n",
+    "        self.box_positions = box_positions\n",
+    "        self.discharge_positions = discharge_positions\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        \"\"\"\n",
+    "        The __str__ function is called when the class is converted to a string.\n",
+    "        It returns a string representation of the move.\n",
+    "        \"\"\"\n",
+    "        return f\"\\n\\\n",
+    "        agents: {self.agents}, \\n\\\n",
+    "        board_dimensions: {self.board_dimensions}, \\n\\\n",
+    "        box_positions: {self.box_positions}, \\n\\\n",
+    "        discharge_positions: {self.discharge_positions}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Move():\n",
     "    \"\"\"\n",
     "    The message class is used to wrap messages and send messages between agents.\n",
@@ -200,7 +233,8 @@
     "        move.add_move()\n",
     "    \n",
     "    def setup(self):\n",
-    "        \n",
+    "        self.box_positions = None\n",
+    "        self.discharge_positions = []\n",
     "        self.box_count, self.agent_positions = self.generateFloorPlan(self.p.total_boxes)\n",
     "        \n",
     "        self.random_agents = ap.AgentList(self, 5, RandomAgent)\n",
@@ -218,6 +252,15 @@
     "        self.total_moves = 0\n",
     "        self.is_floor_organized = True if self.p.total_boxes <= 0 else False # Es falso a menos que no haya cajas\n",
     "        self.finish_time = self.p.steps + 1 # Por default no termina en tiempo\n",
+    "        \n",
+    "        \n",
+    "        # Creamos la posicion inicial\n",
+    "        self.initial_position = InitialPosition(\n",
+    "            agents=[(agent.id, agent.position) for agent in self.all_agents],\n",
+    "            board_dimensions=(self.p.n, self.p.m),\n",
+    "            box_positions=self.box_positions,\n",
+    "            discharge_positions=self.discharge_positions\n",
+    "        )\n",
     "\n",
     "        # Empezamos a guardar los diferentes movimientos\n",
     "        Move.start_new_game()\n",
@@ -268,11 +311,11 @@
     "\n",
     "        # Elegimos \n",
     "        unique_positions: list = self.nprandom.choice(all_positions, k + 5, replace=False)\n",
-    "        box_positions = unique_positions[ : -5] # All elements but the last 5\n",
+    "        self.box_positions = unique_positions[ : -5] # All elements but the last 5\n",
     "        agent_positions = unique_positions[-5 : ] # Only last 5 elements\n",
     "\n",
     "        # Marcamos las celdas seleccionadas como sucias\n",
-    "        for i, j in box_positions:\n",
+    "        for i, j in self.box_positions:\n",
     "            box_count[i][j] = 1\n",
     "\n",
     "        return [box_count, agent_positions]\n",
@@ -586,7 +629,7 @@
     "        'steps': 100,\n",
     "        'n': 20,\n",
     "        'm': 20,\n",
-    "        'total_boxes': 250,\n",
+    "        'total_boxes': 100,\n",
     "        # 'seed': 22,\n",
     "    }\n",
     "\n",
@@ -778,7 +821,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
