feat: save animation in path

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -624,14 +624,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_animation():\n",
-    "    parameters = {\n",
-    "        'steps': 100,\n",
-    "        'n': 20,\n",
-    "        'm': 20,\n",
-    "        'total_boxes': 100,\n",
-    "        # 'seed': 22,\n",
-    "    }\n",
+    "def show_animation(parameters=None):\n",
+    "    if parameters is None:\n",
+    "        parameters = {\n",
+    "            'steps': 100,\n",
+    "            'n': 20,\n",
+    "            'm': 20,\n",
+    "            'total_boxes': 100,\n",
+    "            # 'seed': 22,\n",
+    "        }\n",
     "\n",
     "    def animation_plot(model, ax):\n",
     "        color_dict = {\n",
@@ -716,7 +717,7 @@
    "outputs": [],
    "source": [
     "options = {\n",
-    "    'show_animation': False,\n",
+    "    'show_animation': True,\n",
     "    'multirun_experiment': False, # Not tested\n",
     "    'test_time_taken': False, # Not tested\n",
     "    'test_mov_amount': False, # Not tested\n",
@@ -821,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "opengl",
    "language": "python",
    "name": "python3"
   },
