--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -227,7 +227,7 @@
     "        move = Move(\n",
     "            agent_id=agent.id,\n",
     "            action=agent.intention,\n",
-    "            cell=agent.intention_position,\n",
+    "            cell=agent.position,\n",
     "            looking_direction=agent.looking_direction\n",
     "        )\n",
     "        move.add_move()\n",
@@ -835,7 +835,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
