--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -234,8 +234,7 @@
     "    \n",
     "    def setup(self):\n",
     "        self.box_positions = None\n",
-    "        self.discharge_positions = []\n",
-    "        self.box_count, self.agent_positions = self.generateFloorPlan(self.p.total_boxes)\n",
+    "        self.box_count, self.agent_positions, self.discharge_locations = self.generateFloorPlan(self.p.total_boxes)\n",
     "        \n",
     "        self.random_agents = ap.AgentList(self, 5, RandomAgent)\n",
     "        \n",
@@ -259,7 +258,7 @@
     "            agents=[(agent.id, agent.position) for agent in self.all_agents],\n",
     "            board_dimensions=(self.p.n, self.p.m),\n",
     "            box_positions=self.box_positions,\n",
-    "            discharge_positions=self.discharge_positions\n",
+    "            discharge_positions=self.discharge_locations\n",
     "        )\n",
     "\n",
     "        # Empezamos a guardar los diferentes movimientos\n",
@@ -275,6 +274,8 @@
     "        pass\n",
     "\n",
     "    def end(self):\n",
+    "        print(\"discharge locations: \")\n",
+    "        print(self.discharge_locations)\n",
     "        # print()\n",
     "        # if not self.is_board_clean:\n",
     "        #     print(\"La limpieza no acabo, se llego al tiempo maximo\")\n",
@@ -293,33 +294,52 @@
     "    \n",
     "    \n",
     "    \"\"\" Aux functions \"\"\"\n",
-    "    \n",
+    " \n",
     "    def generateFloorPlan(self, k):\n",
     "        \"\"\"\n",
-    "        Genera una matriz n x m donde habrán k cajas y 5 robots repartidos alrededor de todo el piso del almacén.\n",
-    "        k está limitado a n x m - 5, ya que también se repartirá aleatoriamente la posición de 5 robots (agentes)\n",
-    "        \"\"\"\n",
-    "        # Inicializamos la matriz con ceros\n",
-    "        box_count = [[0 for _ in range(self.p.m)] for _ in range(self.p.n)]\n",
-    "\n",
-    "        # Generamos las posibles posiciones de las celdas\n",
-    "        all_positions = [(i, j) for i in range(self.p.n) for j in range(self.p.m)]\n",
+    "        Generates an n x m floor plan with k boxes, 5 agents, and a designated \n",
+    "        discharge location square at the center. Boxes and agents will not spawn \n",
+    "        in the discharge locations.\n",
     "        \n",
-    "        # Demasiadas cajas\n",
+    "        Parameters:\n",
+    "            k (int): Number of boxes.\n",
+    "        \"\"\"\n",
+    "        discharge_side = self.p.discharge_side\n",
+    "        # Initialize the matrix with zeros\n",
+    "        box_count = [[0 for _ in range(self.p.m)] for _ in range(self.p.n)]\n",
+    "        \n",
+    "        # Compute discharge locations\n",
+    "        center_x = self.p.n // 2\n",
+    "        center_y = self.p.m // 2\n",
+    "        half_side = discharge_side // 2\n",
+    "        \n",
+    "        discharge_locations = [\n",
+    "            (i, j)\n",
+    "            for i in range(center_x - half_side, center_x + half_side + discharge_side % 2)\n",
+    "            for j in range(center_y - half_side, center_y + half_side + discharge_side % 2)\n",
+    "        ]\n",
+    "        \n",
+    "        # Generate all possible positions excluding discharge locations\n",
+    "        all_positions = [\n",
+    "            (i, j) for i in range(self.p.n) for j in range(self.p.m)\n",
+    "            if (i, j) not in discharge_locations\n",
+    "        ]\n",
+    "        \n",
+    "        # Too many boxes and agents for the floor size\n",
     "        if k + 5 > len(all_positions):\n",
     "            raise RuntimeError(\"Too many boxes for the floor size\")\n",
-    "\n",
-    "        # Elegimos \n",
+    "        \n",
+    "        # Select positions for boxes and agents\n",
     "        unique_positions: list = self.nprandom.choice(all_positions, k + 5, replace=False)\n",
-    "        self.box_positions = unique_positions[ : -5] # All elements but the last 5\n",
-    "        agent_positions = unique_positions[-5 : ] # Only last 5 elements\n",
-    "\n",
-    "        # Marcamos las celdas seleccionadas como sucias\n",
+    "        self.box_positions = unique_positions[:-5]  # All elements except the last 5\n",
+    "        agent_positions = unique_positions[-5:]    # Only the last 5 elements\n",
+    "        \n",
+    "        # Mark the selected positions for boxes\n",
     "        for i, j in self.box_positions:\n",
     "            box_count[i][j] = 1\n",
+    "        \n",
+    "        return [box_count, agent_positions, discharge_locations]\n",
     "\n",
-    "        return [box_count, agent_positions]\n",
-    "    \n",
     "    def is_valid_position(self, position):\n",
     "        \"\"\" Verifica si una posición es valida dentro de nuestro tablero \"\"\"\n",
     "        x, y = position\n",
@@ -628,9 +648,10 @@
     "    if parameters is None:\n",
     "        parameters = {\n",
     "            'steps': 100,\n",
-    "            'n': 20,\n",
-    "            'm': 20,\n",
+    "            'n': 21,\n",
+    "            'm': 21,\n",
     "            'total_boxes': 100,\n",
+    "            'discharge_side': 4\n",
     "            # 'seed': 22,\n",
     "        }\n",
     "\n",
@@ -638,7 +659,8 @@
     "        color_dict = {\n",
     "            0: '#000000',  # Black for empty cells\n",
     "            1: '#006600',  # Dark green for cells with boxes\n",
-    "            2: '#FF0000'   # Red for agents\n",
+    "            2: '#FF0000',  # Red for agents\n",
+    "            3: '#808080'   # Gray for discharge locations\n",
     "        }\n",
     "        \n",
     "        # Create base visualization array\n",
@@ -650,6 +672,10 @@
     "                if model.box_count[i][j] > 0:\n",
     "                    ndarray_doubles[i][j] = 1\n",
     "        \n",
+    "        # Mark discharge locations\n",
+    "        for x, y in model.discharge_locations:\n",
+    "            ndarray_doubles[x][y] = 3\n",
+    "            \n",
     "        # Mark agent positions\n",
     "        for agent in model.all_agents:\n",
     "            x, y = agent.position\n",
@@ -661,7 +687,7 @@
     "        # Add text annotations for box counts\n",
     "        max_dim = max(parameters['n'], parameters['m'])\n",
     "        font_size = min(-1/6 * max_dim + 13.33, 10)\n",
-    "        font_size = font_size if font_size >= 4 else 0 # just dont show if its too small\n",
+    "        font_size = font_size if font_size >= 4 else 0  # Just don't show if it's too small\n",
     "\n",
     "        for i in range(len(model.box_count)):\n",
     "            for j in range(len(model.box_count[0])):\n",
@@ -676,8 +702,7 @@
     "    fig, ax = plt.subplots()\n",
     "    model = BoxWarehouseModel(parameters)\n",
     "    animation = ap.animate(model, fig, ax, animation_plot)\n",
-    "    return animation\n",
-    "    "
+    "    return animation\n"
    ]
   },
   {
@@ -717,7 +742,7 @@
    "outputs": [],
    "source": [
     "options = {\n",
-    "    'show_animation': True,\n",
+    "    'show_animation': False,\n",
     "    'multirun_experiment': False, # Not tested\n",
     "    'test_time_taken': False, # Not tested\n",
     "    'test_mov_amount': False, # Not tested\n",
@@ -791,6 +816,7 @@
     "        'n': 20,\n",
     "        'm': 20,\n",
     "        'total_boxes': 250,\n",
+    "        'discharge_side': 4\n",
     "        # 'seed': 22,\n",
     "    }\n",
     "    model = BoxWarehouseModel(parameters)\n",
@@ -822,7 +848,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "opengl",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -835,8 +861,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
