Finished RodrigoAgent, fixed some issues with other agents and determined when the game is over

--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -12,6 +12,7 @@
     "# Visualization\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
+    "import random\n",
     "import matplotlib.pyplot as plt\n",
     "import IPython\n",
     "from IPython.display import display, HTML"
@@ -225,8 +226,19 @@
    "source": [
     "class RodrigoAgent(ap.Agent):\n",
     "    \"\"\"\n",
-    "    Se mueve con movimientos al azar, pero si encuentra una caja la agarra \n",
-    "    y entuentra el mejor camino al centro\n",
+    "        Este agente tiene 3 tipos de modos de juego\n",
+    "        \n",
+    "        El primero es cuando tiene una caja, aqui busca encontrar el camino mas corto la discharge_location \n",
+    "        mas cercana al centro a la que no le consta que no esta llena o es inalcanzable. Esto lo hace con BFS\n",
+    "        sobre el internal_board que es un tablero donde nosotros construimos informacion del tablero real basado\n",
+    "        en lo que hemos visto.\n",
+    "        \n",
+    "        El segundo es cuando no tiene una caja pero recuerda haber visto una caja en algun lado, aqui encuentra el camino\n",
+    "        mas corto a esta caja y la recoge.\n",
+    "        \n",
+    "        El tercero es cuando no recuerda el lugar de ninguna caja ni tiene ninguna caja en mano,\n",
+    "        aqui lo que hace es que visita la casilla mas cercana que todavia no visita, asi buscando explorar de\n",
+    "        manera eficiente.\n",
     "    \"\"\"\n",
     "    \n",
     "    def setup(self):\n",
@@ -243,13 +255,20 @@
     "        self.internal_board = [\n",
     "            [0 for _ in range(self.model.p.m)] for _ in range(self.model.p.n)\n",
     "        ]\n",
+    "        self.visited_cells = [\n",
+    "            [False for _ in range(self.model.p.m)] for _ in range(self.model.p.n)\n",
+    "        ]\n",
     "        \n",
     "        self.bfs_path = []  # Lista de movimientos para el BFS\n",
+    "        self.unvisited_path = [] # Lista de movimientos para visitar a la celda no visitada mas cercana a nosotros\n",
+    "        self.seen_box_path = []\n",
+    "        self.seen_box_stack = [] # Lista de Cajas que he visto pero no he podido recojer\n",
     "        self.discharge_locations = self.model.discharge_locations\n",
     "        self.discharge_location = (-1, -1) # al principio no hay ninguna seleccionada\n",
     "\n",
     "    def setup_position(self, start_position):\n",
     "        self.position = start_position  # Posición inicial del agente\n",
+    "        self.visited_cells[start_position[0]][start_position[1]] = True\n",
     "        \n",
     "    def see(self):\n",
     "        \"\"\" Percibe su entorno y actualiza el internal_board \"\"\"\n",
@@ -262,10 +281,16 @@
     "            i, j = neighbor_pos\n",
     "            if not self.model.is_valid_position(neighbor_pos):\n",
     "                continue\n",
-    "            \n",
+    "            self.visited_cells[i][j] = True\n",
     "            box_count = self.model.box_count[i][j]\n",
     "            self.internal_board[i][j] = box_count\n",
     "            \n",
+    "            if box_count == 0 and (i, j) in self.seen_box_stack:\n",
+    "                self.seen_box_stack.remove((i, j))\n",
+    "                \n",
+    "            if box_count != 0 and (i, j) not in self.seen_box_stack and (i, j) not in self.discharge_locations:\n",
+    "                self.seen_box_stack.append((i, j))\n",
+    "                \n",
     "            if box_count == 1 and (i, j) not in self.discharge_locations:\n",
     "                self.nearby_single_boxes.append(neighbor_pos)\n",
     "            elif 1 <= box_count <= 4:\n",
@@ -309,7 +334,7 @@
     "            # Filtramos las locaciones invalidas\n",
     "            valid_discharge_locations = [\n",
     "                loc for loc in self.discharge_locations\n",
-    "                if self.model.box_count[loc[0]][loc[1]] < 5  #\n",
+    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
     "            ]\n",
     "\n",
     "            # Seleccionamos la mas cercana al centro\n",
@@ -331,10 +356,15 @@
     "            x, y = self.intention_position\n",
     "            self.intention = \"move\"\n",
     "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                self.intention = \"wait\"\n",
+    "                # Hacemos movimiento random\n",
+    "                self.intention = \"move\"\n",
+    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "                self.bfs_path = []\n",
     "        else:\n",
-    "            self.intention = \"wait\"\n",
+    "            self.intention = \"move\"\n",
+    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "\n",
     "    \n",
     "    def bfs(self, start, goal):\n",
@@ -359,22 +389,87 @@
     "                    queue.append((neighbor, path + [current]))\n",
     "        return []  # No econtramos camino\n",
     "    \n",
+    "    def find_unvisited_path(self, start):\n",
+    "        \"\"\" BFS para encontrar a la celda no visitada mas cercana \"\"\"\n",
+    "        from collections import deque\n",
+    "        queue = deque([(start, [])])\n",
+    "        visited = set()\n",
+    "        \n",
+    "        while queue:\n",
+    "            current, path = queue.popleft()\n",
+    "            \n",
+    "            # Encontramos un camino\n",
+    "            if not self.visited_cells[current[0]][current[1]] and current not in self.discharge_locations:  \n",
+    "                return path + [current]\n",
+    "            \n",
+    "            if tuple(current) in visited:\n",
+    "                continue\n",
+    "            visited.add(tuple(current))\n",
+    "            \n",
+    "            for neighbor in self.model.get_neighbors(current[0], current[1]):\n",
+    "                if self.model.is_valid_position(neighbor) and tuple(neighbor) not in visited and self.internal_board[neighbor[0]][neighbor[1]] == 0: # Checo en mi internal_board\n",
+    "                    queue.append((neighbor, path + [current]))\n",
+    "        return []  # No econtramos camino\n",
+    "        \n",
+    "    def visit_nearest_unvisited(self):\n",
+    "        if not self.unvisited_path:\n",
+    "            self.unvisited_path = self.find_unvisited_path(self.position)\n",
+    "            if self.unvisited_path:\n",
+    "                    self.unvisited_path.pop(0)\n",
+    "        \n",
+    "        if self.unvisited_path:\n",
+    "            # Nos intentamos mover a la posicion siguiente\n",
+    "            self.intention_position = self.unvisited_path.pop(0)\n",
+    "            x, y = self.intention_position\n",
+    "            self.intention = \"move\"\n",
+    "            if not self.model.is_valid_move_position(self.intention_position):\n",
+    "                # self.intention = \"wait\"\n",
+    "                # si no es valido hacemos movimiento random      \n",
+    "                self.intention = \"move\"\n",
+    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
+    "                self.unvisited_path = []\n",
+    "        else:\n",
+    "            self.intention = \"wait\"\n",
+    "    \n",
+    "    def chase_box(self):\n",
+    "         if not self.seen_box_path:\n",
+    "             start = self.position\n",
+    "             self.seen_box_path = self.bfs(start, random.choice(self.seen_box_stack))\n",
+    "             if self.seen_box_path:\n",
+    "                self.seen_box_path.pop(0)\n",
+    "\n",
+    "         if self.seen_box_path:\n",
+    "            # Nos intentamos mover a la posicion siguiente\n",
+    "            self.intention_position = self.seen_box_path.pop(0)\n",
+    "            x, y = self.intention_position\n",
+    "            self.intention = \"move\"\n",
+    "            if not self.model.is_valid_move_position(self.intention_position):\n",
+    "                self.intention = \"wait\"\n",
+    "                self.seen_box_path = []\n",
+    "         else:\n",
+    "            self.intention = \"wait\"\n",
+    "            \n",
     "    def explore(self):\n",
     "        \"\"\" Explora el entorno \"\"\"\n",
     "        self.intention = \"wait\"  # Por defecto, espera\n",
     "        if not self.has_box and self.nearby_single_boxes:\n",
+    "            self.unvisited_path = []\n",
     "            self.intention = \"pick_up\"\n",
     "            self.intention_position = self.model.nprandom.choice(self.nearby_single_boxes)\n",
     "        else:\n",
-    "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
+    "            if self.seen_box_stack:\n",
+    "                self.chase_box()\n",
+    "            else:\n",
+    "                self.visit_nearest_unvisited()\n",
     "    \n",
     "    def next(self):\n",
     "        \"\"\" Determina el siguiente paso \"\"\"\n",
     "        plan = self.choose_plan()\n",
     "        if plan == \"find_discharge_location\":\n",
     "            self.find_discharge_location()\n",
+    "            self.unvisited_path = []\n",
+    "            self.seen_box_path = []\n",
     "        elif plan == \"explore\":\n",
     "            self.explore()\n",
     "    \n",
@@ -517,7 +612,7 @@
     "            # Filtramos las locaciones invalidas\n",
     "            valid_discharge_locations = [\n",
     "                loc for loc in self.discharge_locations\n",
-    "                if self.model.box_count[loc[0]][loc[1]] < 5  #\n",
+    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
     "            ]\n",
     "\n",
     "            # Seleccionamos la mas cercana al centro\n",
@@ -539,11 +634,15 @@
     "            x, y = self.intention_position\n",
     "            self.intention = \"move\"\n",
     "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                self.intention = \"wait\"\n",
+    "                # Hacemos movimiento random\n",
+    "                self.intention = \"move\"\n",
+    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "                self.bfs_path = []\n",
     "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "\n",
+    "            self.intention = \"move\"\n",
+    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "    \n",
     "    def bfs(self, start, goal):\n",
     "        \"\"\" Implements BFS to find the path from start to goal \"\"\"\n",
@@ -594,7 +693,6 @@
     "            self.pick_box(*self.intention_position)\n",
     "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
     "            self.position = self.intention_position\n",
-    "    \n",
     "    def move(self):\n",
     "        \"\"\" Ejecuta un movimiento \"\"\"\n",
     "        if not self.model.is_floor_organized:\n",
@@ -725,7 +823,7 @@
     "            # Filtramos las locaciones invalidas\n",
     "            valid_discharge_locations = [\n",
     "                loc for loc in self.discharge_locations\n",
-    "                if self.model.box_count[loc[0]][loc[1]] < 5  #\n",
+    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
     "            ]\n",
     "\n",
     "            # Seleccionamos la mas cercana al centro\n",
@@ -747,11 +845,15 @@
     "            x, y = self.intention_position\n",
     "            self.intention = \"move\"\n",
     "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                self.intention = \"wait\"\n",
+    "                # Hacemos movimiento random\n",
+    "                self.intention = \"move\"\n",
+    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "                self.bfs_path = []\n",
     "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "\n",
+    "            self.intention = \"move\"\n",
+    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "    \n",
     "    def bfs(self, start, goal):\n",
     "        \"\"\" Implements BFS to find the path from start to goal \"\"\"\n",
@@ -802,7 +904,6 @@
     "            self.pick_box(*self.intention_position)\n",
     "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
     "            self.position = self.intention_position\n",
-    "    \n",
     "    def move(self):\n",
     "        \"\"\" Ejecuta un movimiento \"\"\"\n",
     "        if not self.model.is_floor_organized:\n",
@@ -933,7 +1034,7 @@
     "            # Filtramos las locaciones invalidas\n",
     "            valid_discharge_locations = [\n",
     "                loc for loc in self.discharge_locations\n",
-    "                if self.model.box_count[loc[0]][loc[1]] < 5  #\n",
+    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
     "            ]\n",
     "\n",
     "            # Seleccionamos la mas cercana al centro\n",
@@ -955,11 +1056,15 @@
     "            x, y = self.intention_position\n",
     "            self.intention = \"move\"\n",
     "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                self.intention = \"wait\"\n",
+    "                # Hacemos movimiento random\n",
+    "                self.intention = \"move\"\n",
+    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "                self.bfs_path = []\n",
     "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "\n",
+    "            self.intention = \"move\"\n",
+    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "    \n",
     "    def bfs(self, start, goal):\n",
     "        \"\"\" Implements BFS to find the path from start to goal \"\"\"\n",
@@ -1010,7 +1115,6 @@
     "            self.pick_box(*self.intention_position)\n",
     "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
     "            self.position = self.intention_position\n",
-    "    \n",
     "    def move(self):\n",
     "        \"\"\" Ejecuta un movimiento \"\"\"\n",
     "        if not self.model.is_floor_organized:\n",
@@ -1141,7 +1245,7 @@
     "            # Filtramos las locaciones invalidas\n",
     "            valid_discharge_locations = [\n",
     "                loc for loc in self.discharge_locations\n",
-    "                if self.model.box_count[loc[0]][loc[1]] < 5  #\n",
+    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
     "            ]\n",
     "\n",
     "            # Seleccionamos la mas cercana al centro\n",
@@ -1163,11 +1267,15 @@
     "            x, y = self.intention_position\n",
     "            self.intention = \"move\"\n",
     "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                self.intention = \"wait\"\n",
+    "                # Hacemos movimiento random\n",
+    "                self.intention = \"move\"\n",
+    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "                self.bfs_path = []\n",
     "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "\n",
+    "            self.intention = \"move\"\n",
+    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
+    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
     "    \n",
     "    def bfs(self, start, goal):\n",
     "        \"\"\" Implements BFS to find the path from start to goal \"\"\"\n",
@@ -1218,7 +1326,6 @@
     "            self.pick_box(*self.intention_position)\n",
     "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
     "            self.position = self.intention_position\n",
-    "    \n",
     "    def move(self):\n",
     "        \"\"\" Ejecuta un movimiento \"\"\"\n",
     "        if not self.model.is_floor_organized:\n",
@@ -1440,15 +1547,18 @@
     "                return False\n",
     "            \n",
     "        self.box_count[x][y] += dif\n",
-    "        # print(\"bye \", x, y, \" changing by \", dif, \" to now \", self.box_count[x][y])\n",
-    "\n",
-    "        alone_box = 0\n",
-    "        for i in range(self.p.n):\n",
-    "            for j in range(self.p.m):\n",
-    "                alone_box += (1 if self.box_count[i][j] == 1 else 0)\n",
+    " \n",
+    "        # Si todas las discharge_position estan llenas o todas las cajas estan en discharge_positions consideramos que ganamos\n",
+    "        full_discharge_positions = True\n",
+    "        discharged_boxes = 0\n",
+    "        for discharge_location in self.discharge_locations:\n",
+    "            x, y = discharge_location\n",
+    "            discharged_boxes += self.box_count[x][y]\n",
+    "            if self.box_count[x][y] != 5:\n",
+    "                full_discharge_positions = False\n",
     "        \n",
-    "        self.is_floor_organized = (alone_box == 0)\n",
     "        \n",
+    "        self.is_floor_organized = (full_discharge_positions or (self.p.total_boxes == discharged_boxes))\n",
     "        # Termina la simulacion cuando se organizan todas las cajas\n",
     "        if self.is_floor_organized:\n",
     "            self.stop()\n",
@@ -1702,7 +1812,7 @@
     "def show_animation(parameters=None):\n",
     "    if parameters is None:\n",
     "        parameters = {\n",
-    "            'steps': 50,\n",
+    "            'steps': 1000,\n",
     "            'n': 20,\n",
     "            'm': 20,\n",
     "            'total_boxes': 100,\n",
@@ -1803,7 +1913,7 @@
    "outputs": [],
    "source": [
     "options = {\n",
-    "    'show_animation': True,\n",
+    "    'show_animation': False,\n",
     "    'multirun_experiment': False, # Not tested\n",
     "    'test_time_taken': False, # Not tested\n",
     "    'test_mov_amount': False, # Not tested\n",
