--- a/agentpy/mainSimulation.ipynb
+++ b/agentpy/mainSimulation.ipynb
@@ -526,209 +526,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class OscarAgent(ap.Agent):\n",
+    "class OscarAgent(RodrigoAgent):\n",
     "    \"\"\"\n",
-    "    Se mueve con movimientos al azar, pero si encuentra una caja la agarra \n",
-    "    y entuentra el mejor camino al centro\n",
+    "    Las reglas de este agente son las siguientes:\n",
+    "        - Si tiene una caja, busca la descarga más cercana y se dirige a ella.\n",
+    "        - Si no tiene caja pero recuerda alguna caja cercana, se dirige a ella.\n",
+    "        - De lo contrario explora el entorno.\n",
+    "    \n",
+    "    La idea para explorar el entorno es: determinar las celdas más cercanas no visitadas.\n",
+    "    Dada esa lista de celdas, elegir el camino hacia la celda final con más vecinos desconocidos.\n",
     "    \"\"\"\n",
     "    \n",
-    "    def setup(self):\n",
-    "        self.intention = None  # Intención actual (pick_up, stack, move o wait)\n",
-    "        self.intention_position = None  # Posición objetivo al hacer acción\n",
-    "        \n",
-    "        self.nearby_single_boxes = []  # Coordenadas de las cajas cercanas (stacks de 1 sola caja)\n",
-    "        self.nearby_box_stack = []  # Coordenadas de stacks de cajas cercanos (stacks de más de 1 caja)\n",
-    "        self.has_box = False\n",
-    "        \n",
-    "        self.looking_direction = \"Up\"  # Dirección en la que está mirando\n",
-    "        \n",
-    "        # Inicializar tablero interno\n",
-    "        self.internal_board = [\n",
-    "            [0 for _ in range(self.model.p.m)] for _ in range(self.model.p.n)\n",
-    "        ]\n",
-    "        \n",
-    "        self.bfs_path = []  # Lista de movimientos para el BFS\n",
-    "        self.discharge_locations = self.model.discharge_locations\n",
-    "        self.discharge_location = (-1, -1) # al principio no hay ninguna seleccionada\n",
-    "\n",
-    "    def setup_position(self, start_position):\n",
-    "        self.position = start_position  # Posición inicial del agente\n",
-    "        \n",
-    "    def see(self):\n",
-    "        \"\"\" Percibe su entorno y actualiza el internal_board \"\"\"\n",
-    "        x, y = self.position\n",
-    "        self.nearby_single_boxes = []\n",
-    "        self.nearby_box_stack = []\n",
-    "        \n",
-    "        neighbors = self.model.get_neighbors(x, y)\n",
-    "        for neighbor_pos in neighbors:\n",
-    "            i, j = neighbor_pos\n",
-    "            if not self.model.is_valid_position(neighbor_pos):\n",
-    "                continue\n",
-    "            \n",
-    "            box_count = self.model.box_count[i][j]\n",
-    "            self.internal_board[i][j] = box_count\n",
-    "            \n",
-    "            if box_count == 1 and (i, j) not in self.discharge_locations:\n",
-    "                self.nearby_single_boxes.append(neighbor_pos)\n",
-    "            elif 1 <= box_count <= 4:\n",
-    "                self.nearby_box_stack.append(neighbor_pos)\n",
-    "    \n",
-    "    def choose_plan(self):\n",
-    "        \"\"\" Escoge el plan según el estado actual \"\"\"\n",
-    "        if self.has_box:\n",
-    "            return \"find_discharge_location\"\n",
-    "        else:\n",
-    "            return \"explore\"\n",
-    "    \n",
-    "    def find_discharge_location(self):\n",
-    "        \"\"\" Encuentra la ruta a una discharge_location usando BFS \"\"\"\n",
-    "        # Vemos si alguno de los vecinos es la discharge_location que buscamos\n",
-    "        for neighbor in self.model.get_neighbors(*self.position):\n",
-    "            \n",
-    "            if (int(neighbor[0]), int(neighbor[1])) == (int(self.discharge_location[0]), int(self.discharge_location[1])):\n",
-    "                if self.model.box_count[neighbor[0]][neighbor[1]] < 5:\n",
-    "                    self.intention = \"stack\"\n",
-    "                    self.intention_position = neighbor\n",
-    "                    \n",
-    "                    # checamos si hay un agente en la posicion donde queremos poner una caja que es adjacente a nosotros  \n",
-    "                    for agent in self.model.all_agents:\n",
-    "                        if np.array_equal(agent.position, self.intention_position):  # Si pasa hacemos un movimiento random\n",
-    "                            self.intention = \"move\"\n",
-    "                            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "                            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "                    self.bfs_path = []\n",
-    "                    return\n",
-    "                else:\n",
-    "                    self.bfs_path = []\n",
-    "            \n",
-    "\n",
-    "        # Si no hemos computado el mejor camino al centro lo encontramos con bfs\n",
-    "        if not self.bfs_path:\n",
-    "            start = self.position\n",
-    "            # Calculamos el centro del tablero\n",
-    "            center_x, center_y = self.p.n / 2, self.p.m / 2\n",
-    "\n",
-    "            # Filtramos las locaciones invalidas\n",
-    "            valid_discharge_locations = [\n",
-    "                loc for loc in self.discharge_locations\n",
-    "                if self.internal_board[loc[0]][loc[1]] < 5  \n",
-    "            ]\n",
-    "\n",
-    "            # Seleccionamos la mas cercana al centro\n",
-    "            if valid_discharge_locations:\n",
-    "                self.discharge_location = min(\n",
-    "                    valid_discharge_locations,\n",
-    "                    key=lambda loc: ((loc[0] - center_x) ** 2 + (loc[1] - center_y) ** 2) ** 0.5\n",
-    "                )\n",
-    "            else:\n",
-    "                return\n",
-    "            # Encontramos el mejor camino\n",
-    "            self.bfs_path = self.bfs(start, self.discharge_location)\n",
-    "            if self.bfs_path:\n",
-    "                self.bfs_path.pop(0)\n",
-    "        \n",
-    "        if self.bfs_path:\n",
-    "            # Nos intentamos mover a la posicion siguiente\n",
-    "            self.intention_position = self.bfs_path.pop(0)\n",
-    "            x, y = self.intention_position\n",
-    "            self.intention = \"move\"\n",
-    "            if not self.model.is_valid_move_position(self.intention_position):\n",
-    "                # Hacemos movimiento random\n",
-    "                self.intention = \"move\"\n",
-    "                neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "                self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "                self.bfs_path = []\n",
-    "        else:\n",
-    "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "    \n",
-    "    def bfs(self, start, goal):\n",
-    "        \"\"\" Implements BFS to find the path from start to goal \"\"\"\n",
+    "    def find_unvisited_path(self, start):\n",
+    "        \"\"\" BFS para encontrar a la celda no visitada mas cercana \"\"\"\n",
     "        from collections import deque\n",
     "        queue = deque([(start, [])])\n",
     "        visited = set()\n",
     "        \n",
     "        while queue:\n",
-    "            current, path = queue.popleft()\n",
+    "            # Considerar todas las celdas a distancia N\n",
+    "            level_size = len(queue)\n",
+    "            possible_paths = []\n",
+    "            for _ in range(level_size):\n",
+    "                current, path = queue.popleft()\n",
+    "\n",
+    "                # Encontramos un camino\n",
+    "                if not self.visited_cells[current[0]][current[1]] and current not in self.discharge_locations:  \n",
+    "                    possible_paths.append(path + [current])\n",
+    "\n",
+    "                if tuple(current) in visited:\n",
+    "                    continue\n",
+    "                visited.add(tuple(current))\n",
+    "\n",
+    "                for neighbor in self.model.get_neighbors(current[0], current[1]):\n",
+    "                    if self.model.is_valid_position(neighbor) and tuple(neighbor) not in visited and self.internal_board[neighbor[0]][neighbor[1]] == 0: # Checo en mi internal_board\n",
+    "                        queue.append((neighbor, path + [current]))\n",
+    "                        \n",
     "            \n",
-    "            # Encontramos un camino\n",
-    "            if tuple(current) == tuple(goal):  \n",
-    "                return path + [current]\n",
-    "            \n",
-    "            if tuple(current) in visited:\n",
-    "                continue\n",
-    "            visited.add(tuple(current))\n",
-    "            \n",
-    "            for neighbor in self.model.get_neighbors(current[0], current[1]):\n",
-    "                if self.model.is_valid_position(neighbor) and tuple(neighbor) not in visited and (self.internal_board[neighbor[0]][neighbor[1]] == 0 or np.array_equal(neighbor, goal)): # Checo en mi internal_board\n",
-    "                    queue.append((neighbor, path + [current]))\n",
-    "        return []  # No econtramos camino\n",
+    "            # Si hay posibles caminos, elegir la celda final que tiene más vecinos desconocidos\n",
+    "            if len(possible_paths) > 0:\n",
+    "                choose_index = 0\n",
+    "                greatest_unknown = self.unkown_neighbours(possible_paths[0][-1])\n",
+    "                \n",
+    "                for i in range(1, len(possible_paths)):\n",
+    "                    unknown = self.unkown_neighbours(possible_paths[i][-1])\n",
+    "                    if unknown > greatest_unknown:\n",
+    "                        greatest_unknown = unknown\n",
+    "                        choose_index = i\n",
+    "                \n",
+    "                return possible_paths[choose_index]\n",
+    "\n",
+    "        return []  # No encontramos camino\n",
+    "\n",
+    "    def unkown_neighbours(self, position):\n",
+    "        unkown = 0\n",
+    "        for neighbor in self.model.get_neighbors(position[0], position[1]):\n",
+    "            if self.model.is_valid_position(neighbor) and not self.visited_cells[neighbor[0]][neighbor[1]]:\n",
+    "                unkown += 1\n",
+    "        return unkown\n",
     "    \n",
-    "    def explore(self):\n",
-    "        \"\"\" Explora el entorno \"\"\"\n",
-    "        self.intention = \"wait\"  # Por defecto, espera\n",
-    "        if not self.has_box and self.nearby_single_boxes:\n",
-    "            self.intention = \"pick_up\"\n",
-    "            self.intention_position = self.model.nprandom.choice(self.nearby_single_boxes)\n",
-    "        else:\n",
-    "            self.intention = \"move\"\n",
-    "            neighbors = self.model.get_neighbors(self.position[0], self.position[1])\n",
-    "            self.intention_position = self.model.nprandom.choice(neighbors)\n",
-    "    \n",
-    "    def next(self):\n",
-    "        \"\"\" Determina el siguiente paso \"\"\"\n",
-    "        plan = self.choose_plan()\n",
-    "        if plan == \"find_discharge_location\":\n",
-    "            self.find_discharge_location()\n",
-    "        elif plan == \"explore\":\n",
-    "            self.explore()\n",
-    "    \n",
-    "    def action(self):\n",
-    "        \"\"\" Ejecuta la acción \"\"\"\n",
-    "        if self.intention == \"stack\":\n",
-    "            self.stack_boxes(*self.intention_position)\n",
-    "        elif self.intention == \"pick_up\":\n",
-    "            self.pick_box(*self.intention_position)\n",
-    "        elif self.intention == \"move\" and self.model.is_valid_move_position(self.intention_position):\n",
-    "            self.position = self.intention_position\n",
-    "    def move(self):\n",
-    "        \"\"\" Ejecuta un movimiento \"\"\"\n",
-    "        if not self.model.is_floor_organized:\n",
-    "            self.model.total_moves += 1\n",
-    "        self.see()\n",
-    "        self.next()\n",
-    "        self.action()\n",
-    "        self.model.record_move(self)\n",
-    "    \n",
-    "    def pick_box(self, x, y):\n",
-    "        \"\"\" Recoge una caja \"\"\"\n",
-    "        self.updateLookingDirection(x, y)\n",
-    "        if self.model.update_box_count(x, y, -1):\n",
-    "            self.has_box = True\n",
-    "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "    \n",
-    "    def stack_boxes(self, x, y):\n",
-    "        \"\"\" Apila una caja \"\"\"\n",
-    "        self.updateLookingDirection(x, y)\n",
-    "        if self.model.update_box_count(x, y, 1):\n",
-    "            self.has_box = False\n",
-    "        else:\n",
-    "            self.intention = \"wait\"\n",
-    "    \n",
-    "    def updateLookingDirection(self, to_x, to_y):\n",
-    "        \"\"\" Actualiza la dirección de visión del agente \"\"\"\n",
-    "        from_x, from_y = self.position\n",
-    "        if to_x > from_x:\n",
-    "            self.looking_direction = \"down\"\n",
-    "        elif to_x < from_x:\n",
-    "            self.looking_direction = \"up\"\n",
-    "        elif to_y > from_y:\n",
-    "            self.looking_direction = \"right\"\n",
-    "        elif to_y < from_y:\n",
-    "            self.looking_direction = \"left\"\n"
+    "   "
    ]
   },
   {
@@ -1818,9 +1675,9 @@
     "            'total_boxes': 100,\n",
     "            'discharge_side': 4,\n",
     "            'sergio_agents':  0,\n",
-    "            'rodrigo_agents': 5,\n",
+    "            'rodrigo_agents': 0,\n",
     "            'pepe_agents': 0,\n",
-    "            'oscar_agents': 0,\n",
+    "            'oscar_agents': 5,\n",
     "            'hector_agents': 0,\n",
     "            'random_agents': 0,\n",
     "            'seed': 22\n",
@@ -1913,7 +1770,7 @@
    "outputs": [],
    "source": [
     "options = {\n",
-    "    'show_animation': False,\n",
+    "    'show_animation': True,\n",
     "    'multirun_experiment': False, # Not tested\n",
     "    'test_time_taken': False, # Not tested\n",
     "    'test_mov_amount': False, # Not tested\n",
@@ -1989,9 +1846,9 @@
     "        'total_boxes': 250,\n",
     "        'discharge_side': 4,\n",
     "        'sergio_agents':  0,\n",
-    "        'rodrigo_agents': 5,\n",
+    "        'rodrigo_agents': 0,\n",
     "        'pepe_agents': 0,\n",
-    "        'oscar_agents': 0,\n",
+    "        'oscar_agents': 1,\n",
     "        'hector_agents': 0,\n",
     "        'random_agents': 0,\n",
     "        # 'seed': 22,\n",
@@ -2025,7 +1882,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "opengl",
    "language": "python",
    "name": "python3"
   },
